# photobook-creator

./: .gitignore  AGENTS.md  README.md  SKILL.md  SPECS.md  STORIES.md  darkroom_v2.html  index.html  package-lock.json  package.json  plan-ui.md  playwright.config.ts  pyproject.toml  step-1.md  step-2.md  step-3.md  step-4.md  step-5.md  step-6.md  step-7.md  step-8.md
.agents/skills/: superpowers
.agents/skills/dispatching-parallel-agents/: SKILL.md
.agents/skills/github-ops/: LICENSE.txt  SKILL.md
.agents/skills/github-ops/scripts/: issue-comment  issues-dev  issues-pm  issues-refactor  issues-test  worktree-cleanup  worktree-create
.agents/skills/using-git-worktrees/: SKILL.md
.agents/skills/webapp-testing/: SKILL.md
.archive/skill/scripts/: cluster_photos.py  export_photos.sh  generate_thumbnails.sh  suggest_themes.py
.codex/: config.toml
.codex/agents/: dev-agent.md  dev-agent.toml  docs-maintainer.md  docs-maintainer.toml  frontend-test-agent.md  frontend-test-agent.toml  merge-integrator.md  merge-integrator.toml  pm-agent.md  pm-agent.toml  refactor-agent.md  refactor-agent.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-02-spec-review-task-5.md
frontend/js/: api.js  main.js  projects.js
frontend/styles/: darkroom.css  projects.css
photobook/: __init__.py  api.py  cli.py  clustering.py  project_store.py  projects_index.py  uploads.py
scripts/: extract_exif.sh  generate_vacation_fixture_pack.py  pre-push.sh
src/photobook/: __init__.py  aesthetic_score.py  api.py  cli.py  clustering.py  dedupe.py  project_store.py  thumbnails.py
tests/: test_aesthetic_score_gpu_smoke.py  test_api_mvp.py  test_api_step4_integration.py  test_api_step5_scoring_integration.py  test_step4_integration.py  test_thumbnails_integration.py  test_vacation_fixture_pack.py
tests/e2e/: full_app_gate.spec.ts
tests/fixtures/vacation-20/: manifest.json
tests/gate/: test_full_app_gate.py
ui/: package-lock.json  package.json  playwright.config.js  tailwind.config.js  vite.config.js
ui/scripts/: capture-screenshots.mjs
ui/src/: App.css  App.jsx  index.css
ui/tests/: workflow.real.spec.js  workflow.spec.js
