[project]
name = "photo-book-creator"
version = "0.1.0"
description = "Darkroom-first photo book backend"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "httpx>=0.27.0",
  "imagehash>=4.3.1",
  "pillow>=10.0.0",
  "pillow-heif>=0.16.0",
  "python-multipart>=0.0.9",
  "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "ruff>=0.12.5",
]

[project.scripts]
photobook-api = "photobook.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["photobook*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m 'not gate'"
markers = [
  "gate: strict full-app gate tests expected to fail until full app behavior is implemented",
]

[tool.pyright]
extraPaths = ["."]
